# config_with_yaml

./: README.md  pyproject.toml  setup.py
config_with_yaml/: __init__.py  config.py  loader.py
demo/: demo.py
tests/: test_config.py  test_include.py  test_loader.py  test_properties.py
tests/fixtures/: test_config.yml
tests/fixtures/includes/: database.yml  main.yml  settings.yml
