[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "config_with_yaml"
version = "0.2.0"
description = "Loads configurations from yaml files"
readme = "README.md"
license = "GPL-3.0"
authors = [
    {name = "aitormf"}
]
requires-python = ">=3.11"
dependencies = ["PyYAML"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/aitormf/config_with_yaml"

[tool.setuptools.packages.find]
where = ["."]
